apply plugin: 'java'

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation project(path: ':cdc')
    implementation 'org.slf4j:slf4j-api:1.7.29'
    implementation 'dnsjava:dnsjava:2.1.9'
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.hamcrest:hamcrest:2.2'
}

sourceCompatibility = "8"
targetCompatibility = "8"

task download(type: JavaExec) {
    group = "Execution"
    description = "Download file from virtualtld site"
    classpath = sourceSets.main.runtimeClasspath
    main = "com.virtualtld.client.Download"
}